task06_2/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: dbelokursky/task0602:0.0.6
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /actuator/health
              port: 8000
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /actuator/health
              port: 8000
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: task0602-cm
            items:
              - key: application.yml
                path: application.yml
