task06_2/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      name: web
      port: 8000
      targetPort: 8000
