task06_2/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*) # Направляем все запросы /auth к auth-service. Создаем отдельный Ingress из-за аннотаций rewrite
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task04-ingress # Перезаписываем уже существующий ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://auth-service.m.svc.cluster.local/api/v1/auth/validate
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
spec:
  rules:
    - host: arch.homework
    - http:
        paths:
          - path: / # Направляем все запросы к task04-service
            pathType: Prefix
            backend:
              service:
                name: task04-service
                port:
                  number: 80
