task06_2/manifests/routes.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task04-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: / # Направляем все запросы к echoserver
            pathType: Prefix
            backend:
              service:
                name: task04-service
                port:
                  number: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task04-ingress # Перезаписываем уже существующий ingress
  annotations:
    # не забываем про порт
    nginx.ingress.kubernetes.io/auth-url: http://auth-service.m.svc.cluster.local:8000/api/v1/auth/validate
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization, App-Username
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: / # Направляем все запросы к task04-service
            pathType: Prefix
            backend:
              service:
                name: task04-service
                port:
                  number: 8000
